--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-  title: 15464blog
-  description: Anne's blog for 15-464 Technical Animation S21
+title: 15464blog
+description: Anne's course blog for 15-464 Technical Animation S21
